force-app/main/default/objects/ClockifySettings__c/ClockifySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Clockify Settings</label>
</CustomObject>