force-app/main/default/objects/ClockifySettings__c/fields/autoCloseDays__c.field-meta.xml
<CustomField>
    <fullName>autoCloseDays__c</fullName>
    <label>autoCloseDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>