force-app/main/default/objects/ClockifySettings__c/fields/LogsLifeTime__c.field-meta.xml
<CustomField>
    <fullName>LogsLifeTime__c</fullName>
    <description>Em dias</description>
    <label>LogsLifeTime</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>