force-app/main/default/objects/ClockifySettings__c/fields/Signing_Create_Key__c.field-meta.xml
<CustomField>
    <fullName>Signing_Create_Key__c</fullName>
    <label>Signing Create Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>