force-app/main/default/objects/ClockifySettings__c/fields/Signing_Update_Key__c.field-meta.xml
<CustomField>
    <fullName>Signing_Update_Key__c</fullName>
    <label>Signing Update Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>